--- a/styles/style.css
+++ b/styles/style.css
@@ -23,6 +23,12 @@ body {
   background-color: var(--background);
 }
 
+body section, body footer {
+  max-width: 1100px;
+  padding: 0 1em;
+  margin: 0 auto;
+}
+
 ::selection {
   color: var(--background);
   background-color: var(--wish);
@@ -229,24 +235,13 @@ main {
   margin-bottom: 8vh;
 }
 
-section {
-  width: 60vw;
-  overflow: hidden;
-  padding: 8em 20vw 4em 20vw;
-}
-
-section:first-child {
-  padding: 0em 20vw 4em 20vw;
-}
-
 footer {
   position: sticky;
   display: flex;
 
   bottom: 0;
-  width: 60vw;
+  width: 100%;
   height: 10vh;
-  padding: 0 20vw;
   overflow-y: hidden;
   align-items: center;
   background-color: transparent;
@@ -342,15 +337,6 @@ footer p:focus {
 
   p {
     text-align: center;
-  }
-
-  section {
-    width: 84vw;
-    padding: 8em 8vw 8vh 8vw;
-  }
-
-  section:first-child {
-    padding: 0em 8vw 8vh 8vw;
   }
 
   nav.active {
