Fix: Artikel Mobillayout

--- a/styles/article.css
+++ b/styles/article.css
@@ -1,6 +1,7 @@
 body {
     margin: 100px auto;
     max-width: 950px;
+    padding: 1em;
 }
 
 div {
@@ -13,6 +14,8 @@ h1 {
 }
 
 .information {
+    display: block;
+
     font-family: "Poppins";
     color: var(--text);
     opacity: 0.6;
@@ -24,6 +27,14 @@ p {
 }
 
 a {
+    display: block;
+
     text-decoration: none;
     color: var(--desire);
+}
+
+@media screen and (max-width: 1000px) {
+    h1, .information, body a {
+        text-align: center;
+    }    
 }
