--- a/styles/card.css
+++ b/styles/card.css
@@ -46,7 +46,6 @@
 
 .team {
   min-width: 10em;
-  border: 4px solid var(--desire);
 }
 
 .card .image path {
@@ -88,7 +87,7 @@
   font-size: 18px;
   padding-left: 0;
   text-align: left;
-  color: var(--desire);
+  color: var(--accent);
 }
 
 .rating {
