--- a/styles/index.css
+++ b/styles/index.css
@@ -37,6 +37,7 @@
   padding: 0;
   opacity: 1;
   width: 80vw;
+  max-width: 1600px;
   transform: translate(-50%, -50%);
 
   animation: deblur 1s ease-in-out;
@@ -60,7 +61,7 @@
 }
 
 #countdown span {
-  color: var(--accent);
+  color: var(--link);
 }
 
 .timeline {
@@ -121,7 +122,7 @@
   }
 
   .vehicle {
-    top: 57%;
+    top: 33%;
   }
 
   .mini-render {
