--- a/styles/vehicles.css
+++ b/styles/vehicles.css
@@ -5,14 +5,13 @@
   flex-wrap: wrap;
   margin-top: 30px;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 .vehicle img {
-  max-width: 70%;
+  max-width: 100%;
 }
 
-/* TODO: Fix grey box */
 .vehicle {
   display: flex;
 
@@ -20,13 +19,13 @@
   max-width: 270px;
   align-items: center;
   flex-direction: column;
-  background-color: #232323;
+  background-color: #0000001A;
   justify-content: space-between;
 }
 
 .vehicle * {
   text-align: center;
-  background-color: #232323;
+  background-color: transparent;
 }
 
 .info {
@@ -57,8 +56,8 @@
 .filter-wrapper {
   display: flex;
 
+  flex-wrap: wrap;
   flex-direction: row;
-  justify-content: start;
 }
 
 .filter {
@@ -66,7 +65,7 @@
 
   font-size: 15px;
   appearance: none;
-  margin-right: 8px;
+  margin: 0 8px 8px 0;
 }
 
 .filter::after {
@@ -92,3 +91,8 @@
   background-color: var(--background);
 }
 
+@media screen and (max-width: 1000px) {
+  .filter-wrapper {
+    justify-content: center;
+  }
+}
