--- a/styles/vehicles.css
+++ b/styles/vehicles.css
@@ -66,6 +66,9 @@
   font-size: 15px;
   appearance: none;
   margin: 0 8px 8px 0;
+
+  -moz-appearance: none;
+  -webkit-appearance: none;
 }
 
 .filter::after {
