Fix: Show images on low res devices

--- a/styles/card.css
+++ b/styles/card.css
@@ -118,8 +118,16 @@
     padding: 0 0 10px 0;
   }
 
-  .card .image {
-    display: none;
+  .card {
+    flex-direction: column;
+  }
+
+  .card-spacer, .card .image {
+    margin-right: 0;
+  }
+
+  .team {
+    background-position: center;
   }
 
   footer {
